src/main/java/com/example/pastebox/util/error/exception/NoSuchPasteboxException.java
package com.example.pastebox.util.error.exception;

public class NoSuchPasteboxException extends RuntimeException {
    public NoSuchPasteboxException(String message) {
        super(message);
    }
}
